// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-users should allow specifying number of items on a page 1`] = `
Object {
  "itemCount": 5,
  "items": Array [
    Object {
      "email": "jack@daniels-12.com",
      "id": 3,
      "name": "Jack Daniels #12",
    },
    Object {
      "email": "jack@daniels-13.com",
      "id": 4,
      "name": "Jack Daniels #13",
    },
  ],
  "itemsPerPage": 2,
  "page": 2,
  "pageCount": 3,
}
`;

exports[`get-users should return empty list of users when none exist 1`] = `
Object {
  "itemCount": 0,
  "items": Array [],
  "itemsPerPage": 3,
  "page": 1,
  "pageCount": 0,
}
`;

exports[`get-users should return empty set for page too large 1`] = `
Object {
  "itemCount": 4,
  "items": Array [],
  "itemsPerPage": 3,
  "page": 3,
  "pageCount": 2,
}
`;

exports[`get-users should return first page of multiple pages 1`] = `
Object {
  "itemCount": 4,
  "items": Array [
    Object {
      "email": "jack@daniels-2.com",
      "id": 1,
      "name": "Jack Daniels #2",
    },
    Object {
      "email": "jack@daniels-3.com",
      "id": 2,
      "name": "Jack Daniels #3",
    },
    Object {
      "email": "jack@daniels-4.com",
      "id": 3,
      "name": "Jack Daniels #4",
    },
  ],
  "itemsPerPage": 3,
  "page": 1,
  "pageCount": 2,
}
`;

exports[`get-users should return second page of multiple pages 1`] = `
Object {
  "itemCount": 4,
  "items": Array [
    Object {
      "email": "jack@daniels-9.com",
      "id": 4,
      "name": "Jack Daniels #9",
    },
  ],
  "itemsPerPage": 3,
  "page": 2,
  "pageCount": 2,
}
`;

exports[`get-users should return single created user 1`] = `
Object {
  "itemCount": 1,
  "items": Array [
    Object {
      "email": "jack@daniels-1.com",
      "id": 1,
      "name": "Jack Daniels #1",
    },
  ],
  "itemsPerPage": 3,
  "page": 1,
  "pageCount": 1,
}
`;

exports[`get-users should return validation error for invalid page number 1`] = `
Array [
  Object {
    "code": "MINIMUM",
    "description": "Page number",
    "message": "Value 0 is less than minimum 1",
    "params": Array [
      0,
      1,
    ],
    "path": "#/page",
  },
]
`;

exports[`get-users should return validation error for invalid page number 2`] = `
Array [
  Object {
    "code": "MINIMUM",
    "description": "Page number",
    "message": "Value -1 is less than minimum 1",
    "params": Array [
      -1,
      1,
    ],
    "path": "#/page",
  },
]
`;
